# aegis-code-repo-agent

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
aegis/: __init__.py  artifacts.py  cache.py  config.py  doctor.py  evaluation.py  llm.py  manifest.py  models.py  readiness.py  server.py  summary.py  utils.py
aegis/agents/: __init__.py  architecture.py  base.py  build_runtime.py  data_state.py  interface.py  internals.py  llm_agent.py  reviewer.py  risk.py
aegis/knowledge/: __init__.py  codegraph.py  indexer.py  language.py  parsers.py  scanner.py
aegis/orchestrator/: context.py  workflow.py
aegis/rag/: __init__.py  index.py  qa.py  retriever.py
aegis/reporting/: writer.py
docs/: ARCHITECTURE.md  DEMO.md  DEMO_RESULTS.md  PUBLIC_REPO_COPY.md  RELEASE_CHECKLIST.md
examples/eda_repo/src/: main_entrypoint.py
examples/eda_repo/src/device/: device_resources.py
examples/eda_repo/src/integrations/: vivado_tools.py
examples/eda_repo/src/placement/: block_placer.py
examples/eda_repo/src/routing/: partial_dfx_router.py  rw_route.py
examples/eda_repo/src/rtl/: rtl_flow.py
examples/eda_repo/src/timing/: timing_model.py
examples/sample_repo/: app.py  pyproject.toml
examples/sample_repo/repositories/: user_repository.py
examples/sample_repo/services/: user_service.py
skills/aegis-repo-analyst/: SKILL.md
skills/aegis-repo-analyst/agents/: openai.yaml
skills/aegis-repo-analyst/references/: aegis-outputs.md
skills/aegis-repo-analyst/scripts/: run_aegis.py
tests/: test_aegis.py
